Update styles/html for mthalacker.html

--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -10,157 +10,97 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   </head>
-  <body>
-    <div id="wrapper_miah" class="container">
-      <h1 id="heading_miah">
-        Resume Heading
-      </h1>
-      <nav id="nav_miah">
-        <ul id="nav_list_miah">
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#achievements">Achievements</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#social">Social Links</a></li>
-        </ul>
-      </nav> 
-      <article>
-        <section>
-          <ul id="list_body_miah">
-            <li class="list_item_miah"> 
-              <h3 class="heading_miah"><a name="experience">Experience</a></h3>
-              <p>
-                Experienced in object-oriented
-                programming; developing, testing and debugging code; 
-                designing interfaces; and administering systems and networks.
-                Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
-                loin. Cow beef ribs ball tip sirloin sausage pork belly
-                capicola ham hock pancetta. Drumstick rump pancetta, pig
-                sausage tenderloin pork chop jerky cow. Meatball pork chop
-                beef ribs chicken landjaeger pork. Ground round turkey
-                turducken kevin short loin tongue doner. Salami andouille
-                picanha, pork loin t-bone tail landjaeger cupim. Chicken
-                filet mignon capicola spare ribs landjaeger, salami pancetta
-                ham hock rump strip steak meatball kevin tenderloin swine.
-                Sirloin cupim short loin swine, doner picanha bacon. Venison
-                pancetta rump drumstick beef. Ball tip tongue turducken
-                kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
-                chuck ground round chicken andouille. Biltong corned beef
-                spare ribs sirloin, filet mignon turducken fatback.
-              </p>
-            </li>
-            <li class="list_item_miah">
-              <h2 class="list_heading_miah"><a name="achievements">Achievements</a></h2>
-            </li>
-            <li class="list_item_miah">
-              <h2 class="list_heading_miah"><a name="education">Education</a></h2>
-              <p>
-                Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
-                Cow beef ribs ball tip sirloin sausage pork belly capicola ham
-                hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
-                pork chop jerky cow. Meatball pork chop beef ribs chicken
-                landjaeger pork. Ground round turkey turducken kevin short loin
-                tongue doner. Salami andouille picanha, pork loin t-bone tail
-                landjaeger cupim. Chicken filet mignon capicola spare ribs
-                landjaeger, salami pancetta ham hock rump strip steak meatball
-                kevin tenderloin swine.  Sirloin cupim short loin swine, doner
-                picanha bacon. Venison pancetta rump drumstick beef. Ball tip
-                tongue turducken kielbasa short ribs pork belly jowl t-bone
-                tri-tip beef rump chuck ground round chicken andouille. Biltong
-                corned beef spare ribs sirloin, filet mignon turducken fatback.
-              </p>
-            </li>
-            <li class="list_item_miah">
-              <h2 class="list_heading_miah"><a name="skills">Skills</a></h2>
-              <p>
-                Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
-                Cow beef ribs ball tip sirloin sausage pork belly capicola ham
-                hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
-                pork chop jerky cow. Meatball pork chop beef ribs chicken
-                landjaeger pork. Ground round turkey turducken kevin short loin
-                tongue doner. Salami andouille picanha, pork loin t-bone tail
-                landjaeger cupim. Chicken filet mignon capicola spare ribs
-                landjaeger, salami pancetta ham hock rump strip steak meatball
-                kevin tenderloin swine.  Sirloin cupim short loin swine, doner
-                picanha bacon. Venison pancetta rump drumstick beef. Ball tip
-                tongue turducken kielbasa short ribs pork belly jowl t-bone
-                tri-tip beef rump chuck ground round chicken andouille. Biltong
-                corned beef spare ribs sirloin, filet mignon turducken fatback.
-              </p>
-            </li>
-            <li class="list_item_miah">
-              <h2 class="list_heading_miah"><a name="social">Social Links</a></h2>
-            </li>
+  <body id="miah">
+      <div id="wrapper_miah">
+        <h1>
+          Miah Thalacker
+        </h1>
+        <hr>
+        <nav id="nav_list_miah">
+          <ul>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#achievements">Achievements</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#social">Social Links</a></li>
           </ul>
-        </section> 
-        <section>
-          <h3>Acheivements</h3>
-          <ul class="list_body_miah">
-            <li><h2>Twitter</h2> 
-            <li><h2>Facebook</h2>
-            <li><h2>Github</h2>
-            <li><h2>IRC</h2>
-            <li><h2>WakaTime</h2>
-          </ul>
-        </section> 
-        <section>
-          <h3>Education</h3>
-          <p>
-            Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin. Cow
-            beef ribs ball tip sirloin sausage pork belly capicola ham hock
-            pancetta. Drumstick rump pancetta, pig sausage tenderloin pork chop
-            jerky cow. Meatball pork chop beef ribs chicken landjaeger pork.
-            Ground round turkey turducken kevin short loin tongue doner. Salami
-            andouille picanha, pork loin t-bone tail landjaeger cupim. Chicken
-            filet mignon capicola spare ribs landjaeger, salami pancetta ham
-            hock rump strip steak meatball kevin tenderloin swine.  Sirloin
-            cupim short loin swine, doner picanha bacon. Venison pancetta rump
-            drumstick beef. Ball tip tongue turducken kielbasa short ribs pork
-            belly jowl t-bone tri-tip beef rump chuck ground round chicken
-            andouille. Biltong corned beef spare ribs sirloin, filet mignon
-            turducken fatback.
-          </p>
-        </section> 
-        <section>
-          <h3>Skills</h3>
-          <p>
-            Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
-            loin. Cow beef ribs ball tip sirloin sausage pork belly
-            capicola ham hock pancetta. Drumstick rump pancetta, pig
-            sausage tenderloin pork chop jerky cow. Meatball pork chop
-            beef ribs chicken landjaeger pork. Ground round turkey
-            turducken kevin short loin tongue doner. Salami andouille
-            picanha, pork loin t-bone tail landjaeger cupim. Chicken
-            filet mignon capicola spare ribs landjaeger, salami pancetta
-            ham hock rump strip steak meatball kevin tenderloin swine.
-            Sirloin cupim short loin swine, doner picanha bacon. Venison
-            pancetta rump drumstick beef. Ball tip tongue turducken
-            kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
-            chuck ground round chicken andouille. Biltong corned beef
-            spare ribs sirloin, filet mignon turducken fatback.
-          </p>
-        </section> 
-        <section>
-          <h3>Connect with me!</h3>
-          <p>
-            Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
-            loin. Cow beef ribs ball tip sirloin sausage pork belly
-            capicola ham hock pancetta. Drumstick rump pancetta, pig
-            sausage tenderloin pork chop jerky cow. Meatball pork chop
-            beef ribs chicken landjaeger pork. Ground round turkey
-            turducken kevin short loin tongue doner. Salami andouille
-            picanha, pork loin t-bone tail landjaeger cupim. Chicken
-            filet mignon capicola spare ribs landjaeger, salami pancetta
-            ham hock rump strip steak meatball kevin tenderloin swine.
-            Sirloin cupim short loin swine, doner picanha bacon. Venison
-            pancetta rump drumstick beef. Ball tip tongue turducken
-            kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
-            chuck ground round chicken andouille. Biltong corned beef
-            spare ribs sirloin, filet mignon turducken fatback.
-          </p>
-        </section> 
-      </article>
-    </div>
+        </nav> 
+        <article>
+          <section>
+                <h2 class="heading_miah"><a name="experience">Experience</a></h2>
+                <p>
+                  Experienced in object-oriented
+                  programming; developing, testing and debugging code; 
+                  designing interfaces; and administering systems and networks.
+                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
+                  loin. Cow beef ribs ball tip sirloin sausage pork belly
+                  capicola ham hock pancetta. Drumstick rump pancetta, pig
+                  sausage tenderloin pork chop jerky cow. Meatball pork chop
+                  beef ribs chicken landjaeger pork. Ground round turkey
+                  turducken kevin short loin tongue doner. Salami andouille
+                  picanha, pork loin t-bone tail landjaeger cupim. Chicken
+                  filet mignon capicola spare ribs landjaeger, salami pancetta
+                  ham hock rump strip steak meatball kevin tenderloin swine.
+                  Sirloin cupim short loin swine, doner picanha bacon. Venison
+                  pancetta rump drumstick beef. Ball tip tongue turducken
+                  kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
+                  chuck ground round chicken andouille. Biltong corned beef
+                  spare ribs sirloin, filet mignon turducken fatback.
+                </p>
+                <h2 class="heading_miah"><a name="achievements">Achievements</a></h2>
+                <h2 class="heading_miah"><a name="education">Education</a></h2>
+                <p>
+                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
+                  Cow beef ribs ball tip sirloin sausage pork belly capicola ham
+                  hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
+                  pork chop jerky cow. Meatball pork chop beef ribs chicken
+                  landjaeger pork. Ground round turkey turducken kevin short loin
+                  tongue doner. Salami andouille picanha, pork loin t-bone tail
+                  landjaeger cupim. Chicken filet mignon capicola spare ribs
+                  landjaeger, salami pancetta ham hock rump strip steak meatball
+                  kevin tenderloin swine.  Sirloin cupim short loin swine, doner
+                  picanha bacon. Venison pancetta rump drumstick beef. Ball tip
+                  tongue turducken kielbasa short ribs pork belly jowl t-bone
+                  tri-tip beef rump chuck ground round chicken andouille. Biltong
+                  corned beef spare ribs sirloin, filet mignon turducken fatback.
+                </p>
+                <h2 class="heading_miah"><a name="skills">Skills</a></h2>
+                <p>
+                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
+                  Cow beef ribs ball tip sirloin sausage pork belly capicola ham
+                  hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
+                  pork chop jerky cow. Meatball pork chop beef ribs chicken
+                  landjaeger pork. Ground round turkey turducken kevin short loin
+                  tongue doner. Salami andouille picanha, pork loin t-bone tail
+                  landjaeger cupim. Chicken filet mignon capicola spare ribs
+                  landjaeger, salami pancetta ham hock rump strip steak meatball
+                  kevin tenderloin swine.  Sirloin cupim short loin swine, doner
+                  picanha bacon. Venison pancetta rump drumstick beef. Ball tip
+                  tongue turducken kielbasa short ribs pork belly jowl t-bone
+                  tri-tip beef rump chuck ground round chicken andouille. Biltong
+                  corned beef spare ribs sirloin, filet mignon turducken fatback.
+                </p>
+                <h2 class="heading_miah"><a name="social">Social Links</a></h2>
+            <h3>Connect with me!</h3>
+            <p>
+              Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
+              loin. Cow beef ribs ball tip sirloin sausage pork belly
+              capicola ham hock pancetta. Drumstick rump pancetta, pig
+              sausage tenderloin pork chop jerky cow. Meatball pork chop
+              beef ribs chicken landjaeger pork. Ground round turkey
+              turducken kevin short loin tongue doner. Salami andouille
+              picanha, pork loin t-bone tail landjaeger cupim. Chicken
+              filet mignon capicola spare ribs landjaeger, salami pancetta
+              ham hock rump strip steak meatball kevin tenderloin swine.
+              Sirloin cupim short loin swine, doner picanha bacon. Venison
+              pancetta rump drumstick beef. Ball tip tongue turducken
+              kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
+              chuck ground round chicken andouille. Biltong corned beef
+              spare ribs sirloin, filet mignon turducken fatback.
+            </p>
+          </section> 
+        </article>
+      </div>
     <script type="text\javascript">
     
     </script>
