add in alphabetic order jbowe72 anchor tag to index.html to link to people/jbowe72.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h2>Student pages</h2>
         <ul>
           <li><a href="people/zbaxter.html">Zach Baxter</a></li>
+          <li><a href="people/jbowe72.html">Justin Bowe</a></li>
           <li><a href="people/lchase1.html">Luke A Chase</a></li>
           <li><a href="people/bhogan.html">Brian Hogan (Instructor)</a></li>
           <li><a href="people/kkaufman6.html">Kelsy Kaufman</a></li>
