Update CSS for mthalacker1.html

--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -11,78 +11,27 @@
   <![endif]-->
   </head>
   <body id="miah">
-      <div id="wrapper_miah">
-        <h1>
-          Miah Thalacker
-        </h1>
-        <hr>
-        <nav id="nav_list_miah">
-          <ul>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#achievements">Achievements</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#social">Social Links</a></li>
-          </ul>
-        </nav> 
-        <article>
-          <section>
-                <h2 class="heading_miah"><a name="experience">Experience</a></h2>
-                <p>
-                  Experienced in object-oriented
-                  programming; developing, testing and debugging code; 
-                  designing interfaces; and administering systems and networks.
-                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
-                  loin. Cow beef ribs ball tip sirloin sausage pork belly
-                  capicola ham hock pancetta. Drumstick rump pancetta, pig
-                  sausage tenderloin pork chop jerky cow. Meatball pork chop
-                  beef ribs chicken landjaeger pork. Ground round turkey
-                  turducken kevin short loin tongue doner. Salami andouille
-                  picanha, pork loin t-bone tail landjaeger cupim. Chicken
-                  filet mignon capicola spare ribs landjaeger, salami pancetta
-                  ham hock rump strip steak meatball kevin tenderloin swine.
-                  Sirloin cupim short loin swine, doner picanha bacon. Venison
-                  pancetta rump drumstick beef. Ball tip tongue turducken
-                  kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
-                  chuck ground round chicken andouille. Biltong corned beef
-                  spare ribs sirloin, filet mignon turducken fatback.
-                </p>
-                <h2 class="heading_miah"><a name="achievements">Achievements</a></h2>
-                <h2 class="heading_miah"><a name="education">Education</a></h2>
-                <p>
-                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
-                  Cow beef ribs ball tip sirloin sausage pork belly capicola ham
-                  hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
-                  pork chop jerky cow. Meatball pork chop beef ribs chicken
-                  landjaeger pork. Ground round turkey turducken kevin short loin
-                  tongue doner. Salami andouille picanha, pork loin t-bone tail
-                  landjaeger cupim. Chicken filet mignon capicola spare ribs
-                  landjaeger, salami pancetta ham hock rump strip steak meatball
-                  kevin tenderloin swine.  Sirloin cupim short loin swine, doner
-                  picanha bacon. Venison pancetta rump drumstick beef. Ball tip
-                  tongue turducken kielbasa short ribs pork belly jowl t-bone
-                  tri-tip beef rump chuck ground round chicken andouille. Biltong
-                  corned beef spare ribs sirloin, filet mignon turducken fatback.
-                </p>
-                <h2 class="heading_miah"><a name="skills">Skills</a></h2>
-                <p>
-                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
-                  Cow beef ribs ball tip sirloin sausage pork belly capicola ham
-                  hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
-                  pork chop jerky cow. Meatball pork chop beef ribs chicken
-                  landjaeger pork. Ground round turkey turducken kevin short loin
-                  tongue doner. Salami andouille picanha, pork loin t-bone tail
-                  landjaeger cupim. Chicken filet mignon capicola spare ribs
-                  landjaeger, salami pancetta ham hock rump strip steak meatball
-                  kevin tenderloin swine.  Sirloin cupim short loin swine, doner
-                  picanha bacon. Venison pancetta rump drumstick beef. Ball tip
-                  tongue turducken kielbasa short ribs pork belly jowl t-bone
-                  tri-tip beef rump chuck ground round chicken andouille. Biltong
-                  corned beef spare ribs sirloin, filet mignon turducken fatback.
-                </p>
-                <h2 class="heading_miah"><a name="social">Social Links</a></h2>
-            <h3>Connect with me!</h3>
+    <div id="wrapper_miah">
+      <h1>
+        Miah Thalacker
+      </h1>
+      <hr>
+      <nav id="nav_list_miah">
+        <ul>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#achievements">Achievements</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#social">Social Links</a></li>
+        </ul>
+      </nav> 
+      <article>
+        <section>
+          <h2 class="heading_miah"><a name="experience">Experience</a></h2>
             <p>
+              Experienced in object-oriented
+              programming; developing, testing and debugging code; 
+              designing interfaces; and administering systems and networks.
               Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
               loin. Cow beef ribs ball tip sirloin sausage pork belly
               capicola ham hock pancetta. Drumstick rump pancetta, pig
@@ -98,11 +47,60 @@
               chuck ground round chicken andouille. Biltong corned beef
               spare ribs sirloin, filet mignon turducken fatback.
             </p>
-          </section> 
-        </article>
-      </div>
-    <script type="text\javascript">
-    
-    </script>
+            <h2 class="heading_miah"><a name="achievements">Achievements</a></h2>
+            <h2 class="heading_miah"><a name="education">Education</a></h2>
+            <p>
+              Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
+              Cow beef ribs ball tip sirloin sausage pork belly capicola ham
+              hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
+              pork chop jerky cow. Meatball pork chop beef ribs chicken
+              landjaeger pork. Ground round turkey turducken kevin short loin
+              tongue doner. Salami andouille picanha, pork loin t-bone tail
+              landjaeger cupim. Chicken filet mignon capicola spare ribs
+              landjaeger, salami pancetta ham hock rump strip steak meatball
+              kevin tenderloin swine.  Sirloin cupim short loin swine, doner
+              picanha bacon. Venison pancetta rump drumstick beef. Ball tip
+              tongue turducken kielbasa short ribs pork belly jowl t-bone
+              tri-tip beef rump chuck ground round chicken andouille. Biltong
+              corned beef spare ribs sirloin, filet mignon turducken fatback.
+            </p>
+            <h2 class="heading_miah"><a name="skills">Skills</a></h2>
+            <p>
+              Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
+              Cow beef ribs ball tip sirloin sausage pork belly capicola ham
+              hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
+              pork chop jerky cow. Meatball pork chop beef ribs chicken
+              landjaeger pork. Ground round turkey turducken kevin short loin
+              tongue doner. Salami andouille picanha, pork loin t-bone tail
+              landjaeger cupim. Chicken filet mignon capicola spare ribs
+              landjaeger, salami pancetta ham hock rump strip steak meatball
+              kevin tenderloin swine.  Sirloin cupim short loin swine, doner
+              picanha bacon. Venison pancetta rump drumstick beef. Ball tip
+              tongue turducken kielbasa short ribs pork belly jowl t-bone
+              tri-tip beef rump chuck ground round chicken andouille. Biltong
+              corned beef spare ribs sirloin, filet mignon turducken fatback.
+            </p>
+          <h2 class="heading_miah"><a name="social">Social Links</a></h2>
+          <h3>Connect with me!</h3>
+          <p>
+            Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
+            loin. Cow beef ribs ball tip sirloin sausage pork belly
+            capicola ham hock pancetta. Drumstick rump pancetta, pig
+            sausage tenderloin pork chop jerky cow. Meatball pork chop
+            beef ribs chicken landjaeger pork. Ground round turkey
+            turducken kevin short loin tongue doner. Salami andouille
+            picanha, pork loin t-bone tail landjaeger cupim. Chicken
+            filet mignon capicola spare ribs landjaeger, salami pancetta
+            ham hock rump strip steak meatball kevin tenderloin swine.
+            Sirloin cupim short loin swine, doner picanha bacon. Venison
+            pancetta rump drumstick beef. Ball tip tongue turducken
+            kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
+            chuck ground round chicken andouille. Biltong corned beef
+            spare ribs sirloin, filet mignon turducken fatback.
+          </p>
+        </section> 
+      </article>
+      <footer><a href="../index.html">Return to Home Page</a></footer>
+    </div>
   </body>
 </html>
