--- a/people/dvanslambrouck1.html
+++ b/people/dvanslambrouck1.html
@@ -5,11 +5,32 @@
     <link href="../css/style.css" rel="stylesheet">
     <title>David Van SlamBrouck</title>
   </head>
-  <body id="mainVanslambrouck">
-    <main>
-      <section class="education"></section>
-      <section class="pastEmployment"></section>
-      <section class="otherExperience"></section>
+  <body id="djvMain">
+    <main class="container">
+      <h1>David Van SlamBrouck</h1>
+      <section class="education">
+        <h2>Education</h2>
+        <p>Chippewa Valley Technical College:
+
+Associated Degree in Information Technology – Software Developer
+Credits: 54/68 – GPA 4.0
+        </p>
+      </section>
+      <section class="pastEmployment">
+        <h2>Employment Experience</h2>
+        <p>McDonald's #29210
+        General Manager: 11 years of Performance Management, Staffing,
+        Management Proficiency, Coordination, Coaching, Developing Standards,
+        Financial Planning and Strategy, Process Improvement, Decision Making,
+        Strategic Planning, and Quality Control.
+        </p>
+      </section>
+      <section class="otherExperience">
+        <h2>Other Experience</h2>
+        <p>Organizations and Seminars:
+        CV Dev Group (Monthly Meetings)
+        CVTC IT-Software Developer Program Association</p>
+      </section>
     </main>
     <footer>
       <a href="../index.html">Back to the home page</a>
