add skills section to people/jbowe72.html

--- a/people/jbowe72.html
+++ b/people/jbowe72.html
@@ -58,6 +58,16 @@
 
       </section>
       
+      <section id="skills">
+        <h1>Skills</h1>
+        <ul>
+          <li>Programming Languages: Java, Visual Basic, C++, Batch Files, Arduino, Objective-C, Swift 2.0, VB.NET, ASP.NET 2.0, 3.0, 4.0, 4.5, MVC; HTML5, CSS3, JavaScript, Java Servlets, JSP, Spring Framework, jQuery, AJAX .</li>
+          <li>Databases: MySQL, MS SQL Server 2008-2014, MS Access.</li>
+          <li>Software: Vim, Visual Studios 2010, 2012, and 2013; Eclipse, Microsoft Office 2010, SQL Server Management Studios 2008, 2010, and 2014; Mozilla Firefox, Internet Explorer, Safari, Oracle VirtualBox, Notepad++, Microsoft Access, Tortoise SVN, Outlook 2010, Dia, Xampp, Microsoft Word 2013, XCode, Microsoft IIS, GitHub, BitBucket, Adobe Brackets, Microsoft Visio.</li>
+          <li>Operating Systems: Windows Server 2003, 2008 R2, and 2012 R2; Windows: 10, 7, Vista, XP; Macintosh: OSX Yosemite, El Capitan; Linux: Ubuntu; Apple iOS 9</li>
+          <li>Other: Technical writing, project management, web usability and accessibility.</li>
+        </ul>
+      </section>
       
       <section>
         <h1>References</h1>
