Added link to jtalford4.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <li><a href="people/ssteindorf.html">Shane Steindorf</a></li>
           <li><a href="people/jstodola.html">Jessica Stodola</a></li>
           <li><a href="people/tsweitzer.html">Teia Sweitzer</a></li>
+          <li><a href="people/jtalford4.html">Joshua Talford</a></li>
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
         </ul>
       </main>
