--- a/people/jtalford4.html
+++ b/people/jtalford4.html
@@ -2,9 +2,13 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Your page</title>
+    <title>Joshua Talford</title>
   </head>
   <body>
+  
+    <footer>
+        <a href="../index.html">Home Page</a>
+    </footer>
   
   </body>
 </html>
