--- a/people/jtalford4.html
+++ b/people/jtalford4.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Joshua Talford</title>
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora">
   </head>
   <body>
   
