Add basic content structure

--- a/people/jtalford4.html
+++ b/people/jtalford4.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora">
   </head>
   <body>
-  
+    <div class="container">
+      <h1>Joshua Talford</h1>
+      <section class="education">
+        <h2>Education</h2>
+      </section>
+      <section class="pastEmployment">
+        <h2>Past Employment</h2>
+      </section>
+      <section class="otherSkills">
+        <h2>Other Skills</h2>
+      </section>
+    </div>
     <footer>
-        <a href="../index.html">Home Page</a>
+      <a href="../index.html">Home Page</a>
     </footer>
-  
   </body>
 </html>
