--- a/people/jtalford4.html
+++ b/people/jtalford4.html
@@ -12,6 +12,10 @@
       <h1>Joshua Talford</h1>
       <section class="education">
         <h2>Education</h2>
+        <p>Chippewa Valley Technical College</p>
+        <p>Associate's Degree in Information Technnology - Software Development</p>
+        <p>Expected Graduation Date: May 2016</p>
+        <p>GPA: 3.7</p>
       </section>
       <section class="pastEmployment">
         <h2>Past Employment</h2>
