Changed education content, added past employment content

--- a/people/jtalford4.html
+++ b/people/jtalford4.html
@@ -12,13 +12,17 @@
       <h1>Joshua Talford</h1>
       <section class="education">
         <h2>Education</h2>
-        <p>Chippewa Valley Technical College</p>
+        <h3>Chippewa Valley Technical College</h3>
         <p>Associate's Degree in Information Technnology - Software Development</p>
         <p>Expected Graduation Date: May 2016</p>
         <p>GPA: 3.7</p>
       </section>
       <section class="pastEmployment">
         <h2>Past Employment</h2>
+        <h3>McDonald's</h3>
+        <p>2012-2014</p>
+        <h3>Culver's</h3>
+        <p>2015-present</p>
       </section>
       <section class="otherSkills">
         <h2>Other Skills</h2>
