Added skills content to jtalford4.html

--- a/people/jtalford4.html
+++ b/people/jtalford4.html
@@ -26,6 +26,12 @@
       </section>
       <section class="otherSkills">
         <h2>Other Skills</h2>
+        <h3>Programming Languages</h3>
+        <p>HTML5, CSS3, JavaScript, SQL, Visual Basic, ASP.NET, Java, Objective C</p>
+        <h3>Operating Systems</h3>
+        <p>Microsoft Windows, Linux (Ubuntu)</p>
+        <h3>Software</h3>
+        <p>Eclipse, Visual Studio, XCode, MySQL, VirtualBox</p>
       </section>
     </div>
     <footer>
