--- a/people/lchase1.html
+++ b/people/lchase1.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8" />
       <title>My Resume - chase.luke.a</title>
       <link rel="stylesheet" href="../css/style.css">
+      <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
   </head>
 
   <body id="lchase1">
