--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="people/zbaxter.html">Zach Baxter</a></li>
           <li><a href="people/jbowe72.html">Justin Bowe</a></li>
           <li><a href="people/lchase1.html">Luke A Chase</a></li>
+          <li><a href="people/dgruenig.html">Daniel Gruenig</a></li>
           <li><a href="people/bhogan.html">Brian Hogan (Instructor)</a></li>
           <li><a href="people/kkaufman6.html">Kelsy Kaufman</a></li>
           <li><a href="people/cmarion3.html">Charles Marion</a></li>
