Added first H2 and P for content

--- a/people/dgruenig.html
+++ b/people/dgruenig.html
@@ -1,7 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<body id="dgruenig-body">
-    <h1 id="dgruenig-h1">Daniel Gruenig</h1>
+<body class="dgruenig">
+    <h1 class="dgruenig">Daniel Gruenig</h1>
+    <hr>
+    <h2 class="dgruenig">Professional Summary</h2>
+    <p class="dgruenig"></p>
+    <hr>
 </body>
 <footer>
     
