Wrapped content with container

--- a/people/dgruenig.html
+++ b/people/dgruenig.html
@@ -1,11 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <body class="dgruenig">
+    <container>
     <h1 class="dgruenig">Daniel Gruenig</h1>
     <hr>
     <h2 class="dgruenig">Professional Summary</h2>
     <p class="dgruenig"></p>
     <hr>
+    <h2 class="dgruenig">Education</h2>
+    <p class="dgruenig"></p>
+    <hr>
+    <h2 class="dgruenig">Work History</h2>
+    <p class="dgruenig"></p>
+    </container>
 </body>
 <footer>
     
