Added OL of education and corrected indents

--- a/people/dgruenig.html
+++ b/people/dgruenig.html
@@ -1,20 +1,34 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<body class="dgruenig">
-    <container>
-    <h1 class="dgruenig">Daniel Gruenig</h1>
-    <hr>
-    <h2 class="dgruenig">Professional Summary</h2>
-    <p class="dgruenig"></p>
-    <hr>
-    <h2 class="dgruenig">Education</h2>
-    <p class="dgruenig"></p>
-    <hr>
-    <h2 class="dgruenig">Work History</h2>
-    <p class="dgruenig"></p>
+  <body class="dgruenig">
+    <container id="dgruenig-container">
+      <h1 class="dgruenig">Daniel Gruenig</h1>
+      <hr>
+      <h2 class="dgruenig">Professional Summary</h2>
+      <p class="dgruenig">Currently attending CVTC for Software Development and Mobile Development. Have worked with web development and computers for the past seven years. </p>
+      <hr>
+      <h2 class="dgruenig">Education</h2>
+      <p class="dgruenig">
+        <ol class="dgruenig">
+          <li>Chippewa Valley Technical College
+          </br><b>2014-Present</b>
+          </br><li>Central New Mexico Community College</li>
+          General Education
+          </br><b>2013-2014</b>
+          </br><li>New Mexico Tech</li>
+          General Education
+          </br><b>2012-2013</b>
+          </br><li>Highschool</li>
+          Homeschooled with GED
+          </br><b>2008-2012</b>
+        </ol>
+      </p>
+      <hr>
+      <h2 class="dgruenig">Work History</h2>
+      <p class="dgruenig"></p>
     </container>
 </body>
 <footer>
-    
+
 </footer>
 </html>
