Added work history and footer link to home

--- a/people/dgruenig.html
+++ b/people/dgruenig.html
@@ -25,10 +25,19 @@
       </p>
       <hr>
       <h2 class="dgruenig">Work History</h2>
-      <p class="dgruenig"></p>
+      <p class="dgruenig">
+        <ol class="dgruenig">
+          <li>SSCAFCA</li>
+          </br>Summer Intern
+          </br><b>2009-2014</b>
+          <li>Brick & Minifigs</li>
+          </br>Customer Service
+          </br><b>2012</b>
+        </ol>
+      </p>
     </container>
 </body>
-<footer>
-
+<footer class="dgruenig">
+<a href="/index.html">Go to Home</a>
 </footer>
 </html>
