Added name to index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="people/zbaxter.html">Zach Baxter</a></li>
           <li><a href="people/jbowe72.html">Justin Bowe</a></li>
           <li><a href="people/lchase1.html">Luke A Chase</a></li>
+          <li><a href="people/lgotliebson.html">Lisa Gotliebson</a></li>
           <li><a href="people/dgruenig.html">Daniel Gruenig</a></li>
           <li><a href="people/bhogan.html">Brian Hogan (Instructor)</a></li>
           <li><a href="people/kkaufman6.html">Kelsy Kaufman</a></li>
@@ -33,6 +34,7 @@
           <li><a href="people/dvanslambrouck1.html">David Van SlamBrouck</a></li>
         </ul>
       </main>
+
 
     </div>
 
