Added ninja to experience

--- a/people/tsweitzer.html
+++ b/people/tsweitzer.html
@@ -15,9 +15,10 @@
       </header>
 
       <section class="experience">
-        <h1>Experience</h1>
+        <h1 class=tsweitzer>Experience</h1>
         <ul>
           <li>Babysitting</li>
+          <li>Ninja</li>
         </ul>
 
       </section>
@@ -25,7 +26,7 @@
 
       <section>
 
-        <h1>Skills</h1>
+        <h1 class="tsweitzer">Skills</h1>
         <ul>
           <li>Programming Languages: JavaScript, Java, HTML5, CSS3, PHP, SQL.</li>
           <li>Databases: MySQL, SQLite.</li>
@@ -36,7 +37,7 @@
 
       <section>
 
-        <h1>Education</h1>
+        <h1 class="tsweitzer">Education</h1>
 
         <article>
           <p>Chippewa Valley Technical College Information Technology- Software Developer, 2016</p>
@@ -44,7 +45,7 @@
       </section>
 
       <section>
-        <h1>References</h1>
+        <h1 class="tsweitzer">References</h1>
         <p>Available upon request.</p>
       </section>
 
