tsweitzer added Access to skills section

--- a/people/tsweitzer.html
+++ b/people/tsweitzer.html
@@ -19,6 +19,7 @@
         <ul>
           <li>Babysitting</li>
           <li>Ninja</li>
+          
         </ul>
 
       </section>
@@ -29,7 +30,7 @@
         <h1 class="tsweitzer">Skills</h1>
         <ul>
           <li>Programming Languages: JavaScript, Java, HTML5, CSS3, PHP, SQL.</li>
-          <li>Databases: MySQL, SQLite.</li>
+          <li>Databases: MySQL, SQLite, Access.</li>
           <li>Software: Microsoft Office, Visual Studio, Adobe Photoshop, Netbeans, Notepad, Eclipse, Visio, Git, Apache, Parallels, VirtualBox.</li>
           <li>Operating Systems: Mac OSX, Microsoft Windows, Linux (Ubuntu.)</li>
         </ul>
