tsweitzer added id to footer

--- a/people/tsweitzer.html
+++ b/people/tsweitzer.html
@@ -50,7 +50,7 @@
         <p>Available upon request.</p>
       </section>
 
-      <footer>
+      <footer id="tsweitzer">
         <a href="../index.html">Return to the home page</a>
 
       </footer>
