tsweitzer added id to the a tag in the footer

--- a/people/tsweitzer.html
+++ b/people/tsweitzer.html
@@ -50,8 +50,8 @@
         <p>Available upon request.</p>
       </section>
 
-      <footer id="tsweitzer">
-        <a href="../index.html">Return to the home page</a>
+      <footer>
+        <a id = "tsweitzer" href="../index.html">Return to the home page</a>
 
       </footer>
     </div>
