Update CSS for mthalacker1.html

--- a/people/mthalacker1.html
+++ b/people/mthalacker1.html
@@ -50,54 +50,23 @@
                 <h2 class="heading_miah"><a name="achievements">Achievements</a></h2>
                 <h2 class="heading_miah"><a name="education">Education</a></h2>
                 <p>
-                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
-                  Cow beef ribs ball tip sirloin sausage pork belly capicola ham
-                  hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
-                  pork chop jerky cow. Meatball pork chop beef ribs chicken
-                  landjaeger pork. Ground round turkey turducken kevin short loin
-                  tongue doner. Salami andouille picanha, pork loin t-bone tail
-                  landjaeger cupim. Chicken filet mignon capicola spare ribs
-                  landjaeger, salami pancetta ham hock rump strip steak meatball
-                  kevin tenderloin swine.  Sirloin cupim short loin swine, doner
-                  picanha bacon. Venison pancetta rump drumstick beef. Ball tip
-                  tongue turducken kielbasa short ribs pork belly jowl t-bone
-                  tri-tip beef rump chuck ground round chicken andouille. Biltong
-                  corned beef spare ribs sirloin, filet mignon turducken fatback.
+                  Currently enrolled in the IT-Software Developer Program at CVTC
+                  with anticipated graduation in May 2016.
+                  Enrolled in a secondary degree program: IT Network Specialist
                 </p>
                 <h2 class="heading_miah"><a name="skills">Skills</a></h2>
-                <p>
-                  Bacon ipsum dolor amet spare ribs pig tri-tip doner pork loin.
-                  Cow beef ribs ball tip sirloin sausage pork belly capicola ham
-                  hock pancetta. Drumstick rump pancetta, pig sausage tenderloin
-                  pork chop jerky cow. Meatball pork chop beef ribs chicken
-                  landjaeger pork. Ground round turkey turducken kevin short loin
-                  tongue doner. Salami andouille picanha, pork loin t-bone tail
-                  landjaeger cupim. Chicken filet mignon capicola spare ribs
-                  landjaeger, salami pancetta ham hock rump strip steak meatball
-                  kevin tenderloin swine.  Sirloin cupim short loin swine, doner
-                  picanha bacon. Venison pancetta rump drumstick beef. Ball tip
-                  tongue turducken kielbasa short ribs pork belly jowl t-bone
-                  tri-tip beef rump chuck ground round chicken andouille. Biltong
-                  corned beef spare ribs sirloin, filet mignon turducken fatback.
-                </p>
+                  <ul>
+                    <li>
+                      Extensive customer service skills. 
+                    </li>
+                    <li>
+                      Leadership and training.
+                    </li>
+                  </ul>
                 <h2 class="heading_miah"><a name="social">Social Links</a></h2>
-            <h3>Connect with me!</h3>
-            <p>
-              Bacon ipsum dolor amet spare ribs pig tri-tip doner pork
-              loin. Cow beef ribs ball tip sirloin sausage pork belly
-              capicola ham hock pancetta. Drumstick rump pancetta, pig
-              sausage tenderloin pork chop jerky cow. Meatball pork chop
-              beef ribs chicken landjaeger pork. Ground round turkey
-              turducken kevin short loin tongue doner. Salami andouille
-              picanha, pork loin t-bone tail landjaeger cupim. Chicken
-              filet mignon capicola spare ribs landjaeger, salami pancetta
-              ham hock rump strip steak meatball kevin tenderloin swine.
-              Sirloin cupim short loin swine, doner picanha bacon. Venison
-              pancetta rump drumstick beef. Ball tip tongue turducken
-              kielbasa short ribs pork belly jowl t-bone tri-tip beef rump
-              chuck ground round chicken andouille. Biltong corned beef
-              spare ribs sirloin, filet mignon turducken fatback.
-            </p>
+                <p>
+                  Twitter, Facebook, Github
+                </p>
           </section> 
         </article>
       </div>
